--- a/src/ui.glade
+++ b/src/ui.glade
@@ -3,8 +3,6 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkBox" id="mainBox">
-    <property name="can_focus">False</property>
-
     <child>
       <placeholder/>
     </child>
@@ -12,20 +10,23 @@
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
         <property name="orientation">horizontal</property>
 
         <!-- toolbar -->
         <child>
           <object class="GtkBox" id="toolbar">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
 
             <child>
               <object class="GtkButton">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="icon_name">folder-documents-symbolic</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkButton">
+                <property name="visible">True</property>
                 <property name="icon_name">folder-documents-symbolic</property>
               </object>
             </child>
@@ -36,14 +37,12 @@
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
 
             <!-- mainGrid -->
             <child>
               <object class="GtkGrid" id="mainGrid">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
               </object>
             </child>
 
