feat(vim:find): make input overlays work

--- a/src/style.css
+++ b/src/style.css
@@ -11,9 +11,9 @@
  * }
  */
 
-.vim-mode-plus-input {
-  border: 1px solid red;
-}
+/* .vim-mode-plus-input {
+ *   border: 1px solid red;
+ * } */
 
 /*
  * Elements
