--- a/src/style.css
+++ b/src/style.css
@@ -19,11 +19,39 @@
  * Elements
  */
 
-notebook tab {
-  margin: 0;
+window {
+  border: 1px solid alpha(white, 0.05);
+  border-radius: 12px;
 }
-notebook stack > * {
-  margin: 0px;
+
+headerbar {
+  background-color: transparent;
+}
+
+tabboxchild {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+tabbox {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+tabbox > separator {
+  opacity: 0;
+}
+tabview {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+tab {
+  border-radius: 5px;
+  transition: background-color 150ms;
+}
+tab:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+tab:selected {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .main-toolbar {
